# dog-game

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
data/: config.json
src/: main.cpp
src/app/: app.cpp  app.h  dog_repository.h  player.cpp  player.h  unit_of_work.h
src/collision/: collision_detector.cpp  collision_detector.h
src/db/: connection_pool.h  postgres.cpp  postgres.h
src/http/: http_server.cpp  http_server.h  request_handler.cpp  request_handler.h
src/json/: extra_data.h  json_loader.cpp  json_loader.h
src/model/: geom.h  loot_generator.h  model.cpp  model.h  model_serialization.cpp  model_serialization.h
src/tools/: cmd_parser.h  logger.cpp  logger.h  ticker.h
tests/: collision-detector-tests.cpp  model-tests.cpp  state-serialization-tests.cpp
